Fix mobile view color box visibility, slider size display on hover/slide, and style adjustments

--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ input{
   flex-direction: row;
   flex-wrap: wrap;
   gap: 1px;
-  margin: 2rem auto;
+  margin: 0.5rem auto;
   box-shadow: rgba(0, 0, 0, 0.5) 0px 1px 4px;
   width: 100%;
   height: auto;
@@ -163,6 +163,11 @@ input{
 .sorted {
   background-color: #00C49A;
   border: 1px solid #009879;
+}
+
+.unsorted {
+  border: 1px solid #FF3CAC;
+  background-color: #6A0572;
 }
 
 .swap {
@@ -200,9 +205,9 @@ input{
 .color_legend {
   display: flex;
   flex-wrap: wrap;
-  gap: 1rem;
-  margin-top: 1rem;
-  padding: 0.5rem 1rem;
+  gap: 0.5rem;
+  margin-top: 0.5rem;
+  padding: 0.5rem 0.5rem;
   color: black;
   border-radius: 10px;
   justify-content: center;
